--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
   "bugs": {
     "url": "https://github.com/cinek260/react-modal-with-keys-action/issues"
   },
-  "homepage": "https://github.com/cinek260/react-modal-with-keys-action#readme"
+  "homepage": "https://github.com/cinek260/react-modal-with-keys-action#readme",
+  "dependencies": {
+    "react": "^0.14.6",
+    "react-pure-render": "^1.0.2"
+  }
 }
