--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-modal-with-keys-action",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "React modal component with keydown event Listener. Close modal on 'Esc', perform action on 'Enter' etc.",
   "main": "src/modal.react.js",
   "scripts": {
@@ -23,6 +23,6 @@
   "homepage": "https://github.com/cinek260/react-modal-with-keys-action#readme",
   "dependencies": {
     "react": "^0.14.6",
-    "react-pure-render": "^1.0.2",
+    "react-pure-render": "^1.0.2"
   }
 }
