--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "react-modal-with-keys-action",
   "version": "1.0.4",
-  "description": "React modal component with keydown event Listener. Close modal on 'Esc', perform action on 'Enter' etc.",
-  "main": "src/modal.react.js",
+  "description": "React modal component with keydown event Listener.",
+  "main": "lib/modal.react.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/cinek260/react-modal-with-keys-action.git"
+  },
+  "scripts": {
+    "build": "./node_modules/.bin/babel src --out-dir ./lib",
+    "prepublish": "npm run build"
   },
   "keywords": [
     "react",
@@ -24,5 +28,10 @@
   "dependencies": {
     "react": "^0.14.6",
     "react-pure-render": "^1.0.2"
+  },
+  "devDependencies": {
+    "babel": "^5.2.9",
+    "babel-eslint": "^3.0.1",
+    "eslint": "^0.20.0"
   }
 }
